2020-08-09  Arthur de Jong <arthur@arthurdejong.org>

	* [40fcc24] stdnum/be/banks.dat, stdnum/cn/loc.dat,
	  stdnum/eu/nace.dat, stdnum/gs1_ai.dat, stdnum/iban.dat,
	  stdnum/imsi.dat, stdnum/isbn.dat, stdnum/nz/banks.dat,
	  stdnum/oui.dat, update/imsi.py, update/nz_banks.py: Update
	  database files

2020-03-08  Leandro Regueiro <leandro.regueiro@gmail.com>

	* [ff188bd] stdnum/vatin.py, tests/test_vatin.doctest: Add module
	  to check any VAT number

	  This effectively mimics vatnumber's `check_vat` function, so people
	  can easily replace the outdated vatnumber library with stdnum.

	  Closes https://github.com/arthurdejong/python-stdnum/pull/199

2020-08-08  Arthur de Jong <arthur@arthurdejong.org>

	* [b6e43cd] update/gs1_ai.py: Fix Python 3.6 issue in update script

	  Fixes 180788a

2020-08-08  Arthur de Jong <arthur@arthurdejong.org>

	* [180788a] stdnum/gs1_128.py, stdnum/gs1_ai.dat,
	  tests/test_gs1_128.doctest, update/gs1_ai.py: Add GS1-128 format

	  This adds validation, parsing and encoding functions for
	  GS1-128. It is based on the lists of formats as published by
	  the GS1 organisation.

	  Based on the implementation provided by Sergi Almacellas Abellana
	  <sergi@koolpi.com>.

	  Closes https://github.com/arthurdejong/python-stdnum/pull/144

2020-08-02  Arthur de Jong <arthur@arthurdejong.org>

	* [c2284f3] stdnum/ro/onrc.py, tests/test_ro_onrc.doctest: Add
	  Romanian Trade Register identifier

	  Closes https://github.com/arthurdejong/python-stdnum/issues/229
	  Closes https://github.com/arthurdejong/python-stdnum/pull/234

2020-06-02  Mohammed Salman <mohammed@holvi.com>

	* [94e2c63] stdnum/gb/utr.py, tests/test_gb_utr.doctest: Add
	  English Unique Tax Reference

	  Closes https://github.com/arthurdejong/python-stdnum/pull/227

2020-08-02  Arthur de Jong <arthur@arthurdejong.org>

	* [505521e] stdnum/ro/cnp.py: Support foreign residents for
	  Romanian CNP

	  This supports 7 or 8 as first digits in the CNP which are